Commit 1 da aula do dia 18/09

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "slim/slim": "2.6.2",
         "monolog/monolog": "1.17.1",
-        "fzaninotto/faker": "v1.5.0"
+        "fzaninotto/faker": "v1.5.0",
+        "slim/slim-skeleton": "2.1.2"
     }
 }
